# NuttyBadge

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: build.yml
NuttyHardware/: README.md  badge.kicad_pcb  badge.kicad_prl  badge.kicad_pro  badge.kicad_sch  badge.kicad_sch-bak  esp32-s3.kicad_sch  fp-info-cache  fp-lib-table  remove_stitched_vias.py  sym-lib-table
NuttyHardware/custom_footprint/: BatteryHolder_2AA.kicad_mod  Conn_uSDcard.kicad_mod  D_SMA_Handsoldering-BigDiodeSilkscreen.kicad_mod  D_SOD-123-BigDiodeSilkscreen.kicad_mod  ESP32-S3-WROOM-1.kicad_mod  GM12864T-5D.kicad_mod  LED_0805_2012Metric_Pad1.15x1.40mm_HandSolder-BigDiodeSilkscreen.kicad_mod  LED_WS2812B_PLCC4_5.0x5.0mm_P3.2mm-TriangleSilkscreen.kicad_mod  M242-12864-7.kicad_mod  Module_ESP32S3_LuatOS.kicad_mod  Module_Waveshare_ESP32-S3-DEV-KIT-N16R8.kicad_mod  PinSocket_2x04_P2.54mm_Vertical_PinNumberFlipped.kicad_mod  SW_DPDT_Power_Switch.kicad_mod  SW_Push_1P1T_NO_CK_PTS125Sx43PSMTR_NoHoles.kicad_mod  Texas_DRC0010J_ThermalVias_LargeHoles.kicad_mod
NuttyHardware/custom_symbols/: 12864_LCD_Display.bak  12864_LCD_Display.kicad_sym  ESP+3V3.kicad_sym  ESP32S3_Dev_Board.bak  ESP32S3_Dev_Board.kicad_sym  LDO_Regulators.kicad_sym  MicroSD_Slot.kicad_sym  wch_mcu_peripheral.kicad_sym
NuttyHardware/mass_production/: BOM_PCBA_整合BOM.xlsx  badge-B_Mask.gbs  badge-Edge_Cuts.gm1  badge-F_Cu.gtl  (+1 more)
NuttyOS/: CMakeLists.txt  README.md  compose.yaml  esp_idf_project_configuration.json  partitions.csv  sdkconfig
NuttyOS/main/: BuildDefs.h  CMakeLists.txt  NuttyPeripherals.c  NuttyPeripherals.h  config.h  idf_component.yml  main.c
NuttyOS/main/apps/: generate_app.py
NuttyOS/main/apps/NutNutRevolution/: NutNutRevolution.c  NutNutRevolution.h  README.md  ssc_to_nnr.py
NuttyOS/main/apps/NutNutRevolution/songs/: butterfly_nnr.h  night_of_fire_nnr.h
NuttyOS/main/apps/NuttyAbout/: NuttyAbout.h
NuttyOS/main/apps/NuttyAudioPlayer/: NuttyAudioPlayer.c  NuttyAudioPlayer.h
NuttyOS/main/apps/NuttyBTPresenter/: NuttyBTPresenter.c  NuttyBTPresenter.h
NuttyOS/main/apps/NuttyBTRemote/: NuttyBTRemote.h
NuttyOS/main/apps/NuttyBTScanner/: NuttyBTScanner.c
NuttyOS/main/apps/NuttyBird/: NuttyBird.c  NuttyBird.h
NuttyOS/main/apps/NuttyCounter/: NuttyCounter.c
NuttyOS/main/apps/NuttyDOOM/: NuttyDOOM.c  NuttyDOOM.h
NuttyOS/main/apps/NuttyDOOM/doomgeneric/: Makefile.linuxvt  Makefile.nuttybadge  Makefile.soso  Makefile.sosox  doomgeneric.h  doomgeneric_linuxvt.c  doomgeneric_nuttybadge.c  doomgeneric_nuttybadge_sound.c  doomgeneric_soso.c  doomgeneric_sosox.c  doomgeneric_xlib.c  hu_stuff.c  hu_stuff.h  i_input.c  i_video.c  m_menu.c  m_menu.h  p_maputl.c  p_mobj.c  p_setup.c  r_draw.c  r_main.c  r_plane.c  r_things.c  st_stuff.c  st_stuff.h  statdump.c  wi_stuff.c
NuttyOS/main/apps/NuttyELFBrowser/: NuttyELFBrowser.c  NuttyELFBrowser.h
NuttyOS/main/apps/NuttyFileManager/: NuttyFileManager.c  NuttyFileManager.h
NuttyOS/main/apps/NuttyMenu/: NuttyMenu.c  NuttyMenu.h
NuttyOS/main/apps/NuttyMinesweeper/: NuttyMinesweeper.c  NuttyMinesweeper.h
NuttyOS/main/apps/NuttyRF/: NuttyRF.c
NuttyOS/main/apps/NuttyRGBControl/: NuttyRGBControl.c
NuttyOS/main/apps/NuttyRemote/: NuttyRemote.c  NuttyRemote.h
NuttyOS/main/apps/NuttySettings/: NuttySettings.c
NuttyOS/main/apps/NuttyShooter/: NuttyShooter.c  NuttyShooter.h
NuttyOS/main/apps/NuttyShowImage/: NuttyShowImage.c  NuttyShowImage.h
NuttyOS/main/apps/NuttySnake/: NuttySnake.c  NuttySnake.h
NuttyOS/main/apps/NuttyStopwatch/: NuttyStopwatch.c
NuttyOS/main/apps/NuttyTest/: NuttyTest.c  NuttyTest.h
NuttyOS/main/apps/NuttyTetris/: NuttyTetris.c  NuttyTetris.h
NuttyOS/main/apps/NuttyWifiScanner/: NuttyWifiScanner.c  NuttyWifiScanner.h
NuttyOS/main/apps/_app_template/: _AppName.c  _AppName.h
NuttyOS/main/drivers/: ioe.c  ioe.h  ir.c  ir.h  kv.c  kv.h  lcd.c  lcd.h  pwm_audio.c  pwm_audio.h  rgb.c  sdcard.c  sdcard.h  usb.c  usb.h
NuttyOS/main/images/: boot_icon.c
NuttyOS/main/lvgl_fonts/: cg_pixel_4x5_mono-.c  cg_pixel_4x5_mono.c  cg_pixel_4x5_mono.h
NuttyOS/main/services/NuttyAudio/: NuttyAudio.c  NuttyAudio.h
NuttyOS/main/services/NuttyDisplay/: NuttyDisplay.c  NuttyDisplay.h
NuttyOS/main/services/NuttyELFLoader/: NuttyELFLoader.c  NuttyELFLoader.h
NuttyOS/main/services/NuttyIR/: NuttyIR.c  NuttyIR.h
NuttyOS/main/services/NuttyInput/: NuttyInput.c  NuttyInput.h
NuttyOS/main/services/NuttyRGB/: NuttyRGB.c  NuttyRGB.h
NuttyOS/main/services/NuttyStorage/: NuttyStorage.c  NuttyStorage.h
NuttyOS/main/services/NuttySystemMonitor/: NuttySystemMonitor.c  NuttySystemMonitor.h
main/: CMakeLists.txt  config.h  idf_component.yml  main.c
main/apps/NuttyAbout/: NuttyAbout.c  NuttyAbout.h
main/apps/NuttyAudioPlayer/: NuttyAudioPlayer.c  NuttyAudioPlayer.h
main/apps/NuttyBTRemote/: NuttyBTRemote.c  NuttyBTRemote.h
main/apps/NuttyBTScanner/: NuttyBTScanner.c  NuttyBTScanner.h
main/apps/NuttyCounter/: NuttyCounter.c  NuttyCounter.h
main/apps/NuttyFileManager/: NuttyFileManager.c
main/apps/NuttyMenu/: NuttyMenu.c
main/apps/NuttyRF/: NuttyRF.c  NuttyRF.h
main/apps/NuttyRGBControl/: NuttyRGBControl.c  NuttyRGBControl.h
main/apps/NuttyRemote/: NuttyRemote.c  NuttyRemote.h
main/apps/NuttySettings/: NuttySettings.c  NuttySettings.h
main/apps/NuttySnake/: NuttySnake.c  NuttySnake.h
main/apps/NuttyStopwatch/: NuttyStopwatch.c  NuttyStopwatch.h
main/apps/NuttyTest/: NuttyTest.c  NuttyTest.h
main/apps/NuttyWifiScanner/: NuttyWifiScanner.h
main/drivers/: ioe.c  ioe.h  lcd.c  lcd.h  pwm_audio.c  rgb.h  sdcard.c  sdcard.h
main/services/NuttyApps/: NuttyApps.c  NuttyApps.h
main/services/NuttyAudio/: NuttyAudio.c  NuttyAudio.h
main/services/NuttyDisplay/: NuttyDisplay.c  NuttyDisplay.h
main/services/NuttyIR/: NuttyIR.c  NuttyIR.h
main/services/NuttyInput/: NuttyInput.c  NuttyInput.h
main/services/NuttyRGB/: NuttyRGB.c  NuttyRGB.h
main/services/NuttyStorage/: NuttyStorage.c
main/services/NuttySystemMonitor/: NuttySystemMonitor.c  NuttySystemMonitor.h
tests/: test_invariant_NuttyFileManager.c
(+53 files in other folders)
