idf_component_register(
                    SRCS "main.c" "NuttyPeripherals.c"
                    SRCS ""
                    SRCS "drivers/pwm_audio.c"
                    SRCS "drivers/ioe.c"
                    SRCS "drivers/lcd.c"
                    SRCS "drivers/rgb.c"
                    SRCS "drivers/ir.c"
                    SRCS "drivers/sdcard.c"
                    SRCS ""
                    SRCS "services/NuttyAudio/NuttyAudio.c"
                    SRCS "services/NuttyInput/NuttyInput.c"
                    SRCS "services/NuttySystemMonitor/NuttySystemMonitor.c"
                    SRCS "services/NuttyDisplay/NuttyDisplay.c"
                    SRCS "services/NuttyRGB/NuttyRGB.c"
                    SRCS "services/NuttyIR/NuttyIR.c"
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    INCLUDE_DIRS ".")
