idf_component_register(
                    SRCS "main.c" "NuttyPeripherals.c"
                    SRCS ""
                    SRCS "drivers/pwm_audio.c"
                    SRCS "drivers/ioe.c"
                    SRCS "drivers/lcd.c"
                    SRCS "drivers/rgb.c"
                    SRCS "drivers/ir.c"
                    SRCS "drivers/sdcard.c"
                    SRCS ""
                    SRCS "services/NuttyAudio/NuttyAudio.c"
                    SRCS "services/NuttyInput/NuttyInput.c"
                    SRCS "services/NuttySystemMonitor/NuttySystemMonitor.c"
                    SRCS "services/NuttyDisplay/NuttyDisplay.c"
                    SRCS "services/NuttyRGB/NuttyRGB.c"
                    SRCS "services/NuttyIR/NuttyIR.c"
                    SRCS "services/NuttyApps/NuttyApps.c"
                    SRCS ""
                    SRCS "lvgl_fonts/cg_pixel_4x5_mono.c"
                    SRCS ""
                    SRCS "apps/NuttyMenu/NuttyMenu.c"
                    SRCS "apps/NuttyTest/NuttyTest.c"
                    SRCS "apps/NuttySnake/NuttySnake.c"
                    SRCS "apps/NuttyAudioPlayer/NuttyAudioPlayer.c"
                    SRCS "apps/NuttyRemote/NuttyRemote.c"
                    SRCS "apps/NuttySettings/NuttySettings.c"
                    SRCS "apps/NuttyRF/NuttyRF.c"
                    SRCS "apps/NuttyAbout/NuttyAbout.c"
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    SRCS ""
                    INCLUDE_DIRS ".")
