idf_component_register(
                    SRCS "main.c" "NuttyPeripherals.c"
                    SRCS "drivers/pwm_audio.c"
                    SRCS "drivers/ioe.c"
                    SRCS "drivers/lcd.c"
                    SRCS "drivers/rgb.c"
                    SRCS "drivers/ir.c"
                    SRCS "drivers/sdcard.c"
                    SRCS "drivers/usb.c"
                    SRCS "drivers/kv.c"
                    SRCS "services/NuttyAudio/NuttyAudio.c"
                    SRCS "services/NuttyInput/NuttyInput.c"
                    SRCS "services/NuttySystemMonitor/NuttySystemMonitor.c"
                    SRCS "services/NuttyDisplay/NuttyDisplay.c"
                    SRCS "services/NuttyRGB/NuttyRGB.c"
                    SRCS "services/NuttyIR/NuttyIR.c"
                    SRCS "services/NuttyStorage/NuttyStorage.c"
                    SRCS "services/NuttyApps/NuttyApps.c"
                    SRCS "lvgl_fonts/cg_pixel_4x5_mono.c"
                    SRCS "apps/NuttyMenu/NuttyMenu.c"
                    SRCS "apps/NuttyMinesweeper/NuttyMinesweeper.c"
                    SRCS "apps/NuttyShooter/NuttyShooter.c"
                    SRCS "apps/NuttyTest/NuttyTest.c"
                    SRCS "apps/NuttySnake/NuttySnake.c"
                    SRCS "apps/NuttyBird/NuttyBird.c"
                    SRCS "apps/NutNutRevolution/NutNutRevolution.c"
                    SRCS "apps/NuttyAudioPlayer/NuttyAudioPlayer.c"
                    SRCS "apps/NuttyRemote/NuttyRemote.c"
                    SRCS "apps/NuttyRF/NuttyRF.c"
                    SRCS "apps/NuttyRGBControl/NuttyRGBControl.c"
                    SRCS "apps/NuttyWifiScanner/NuttyWifiScanner.c"
                    SRCS "apps/NuttyCounter/NuttyCounter.c"
                    SRCS "apps/NuttyBTScanner/NuttyBTScanner.c"
                    SRCS "apps/NuttyBTPresenter/NuttyBTPresenter.c"
                    SRCS "apps/NuttyStopwatch/NuttyStopwatch.c"
                    SRCS "apps/NuttyFileManager/NuttyFileManager.c"
                    SRCS "apps/NuttySettings/NuttySettings.c"
                    SRCS "apps/NuttyShowImage/NuttyShowImage.c"
                    SRCS "apps/NuttyAbout/NuttyAbout.c"
                    SRCS "apps/NuttyTetris/NuttyTetris.c"
                    SRCS "apps/NuttyDOOM/NuttyDOOM.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/am_map.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_event.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_items.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_iwad.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_loop.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_main.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_mode.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/d_net.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/doomdef.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/doomgeneric.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/doomgeneric_nuttybadge.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/doomstat.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/dstrings.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/f_finale.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/f_wipe.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/g_game.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/hu_lib.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/hu_stuff.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_cdmus.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_endoom.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_input.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_joystick.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_scale.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_sound.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_system.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_timer.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/i_video.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/info.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_argv.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_bbox.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_cheat.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_config.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_controls.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_fixed.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_menu.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_misc.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/m_random.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/memio.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/mus2mid.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_ceilng.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_doors.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_enemy.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_floor.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_inter.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_lights.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_map.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_maputl.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_mobj.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_plats.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_pspr.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_saveg.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_setup.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_sight.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_spec.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_switch.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_telept.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_tick.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/p_user.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_bsp.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_data.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_draw.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_main.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_plane.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_segs.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_sky.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/r_things.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/s_sound.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/sha1.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/sounds.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/st_lib.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/st_stuff.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/statdump.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/tables.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/v_video.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/w_checksum.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/w_file.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/w_file_stdc.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/w_main.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/w_wad.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/wi_stuff.c"
                    SRCS "apps/NuttyDOOM/doomgeneric/z_zone.c"
                    INCLUDE_DIRS "."
                    INCLUDE_DIRS "apps/NuttyDOOM/doomgeneric")

target_compile_options(${COMPONENT_LIB} PRIVATE "-UFEATURE_SOUND")
